# cromulent

./: .gitignore  Cargo.toml  DEVELOPMENT.md  PLAN-agentd.md  README.md  UNFINISHED.md
src/: lib.rs  main.rs
src/agent/: compaction.rs  mod.rs  prompt.rs  runner.rs  transcript.rs
src/app/: mod.rs  output.rs  router.rs  runtime.rs  state.rs
src/auth/: codex.rs  config.rs  mod.rs  providers_config.rs
src/process/: bash_runner.rs  mod.rs
src/protocol/: commands.rs  events.rs  mod.rs  responses.rs  types.rs
src/providers/: deepseek_compat.rs  fake.rs  mod.rs  openai_compat.rs  openai_responses.rs  retry.rs
src/session/: export.rs  fork.rs  mod.rs  store.rs
src/tools/: ask_user.rs  bash.rs  edit.rs  find.rs  grep.rs  mod.rs  read.rs  registry.rs  write.rs
src/tools/hashline/: atomic_write.rs  diff.rs  edit.rs  file_kind.rs  hash.rs  metadata.rs  mod.rs  parse.rs  queue.rs  read.rs
src/transport/: reader.rs  writer.rs
src/util/: fs.rs  ids.rs  mod.rs  time.rs
tests/: ask_user_flow.rs  cancellation.rs  config_merge.rs  protocol_jsonl.rs  providers.rs  sessions.rs  tools.rs
tests/inline/: agent_compaction_tests.rs  agent_prompt_tests.rs  agent_transcript_tests.rs  auth_codex_tests.rs  auth_config_tests.rs  providers_openai_compat_tests.rs  providers_openai_responses_tests.rs  session_export_tests.rs  session_fork_tests.rs  tools_hashline_hash_tests.rs  tools_hashline_parse_tests.rs
