[package]
name = "cromulent"
version = "0.1.0"
edition = "2021"
description = "Headless coding agent daemon - JSONL protocol over stdin/stdout"

[lib]
name = "cromulent"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
dirs = "5"
regex = "1"
walkdir = "2"
ignore = "0.4"
globset = "0.4"
similar = "2"
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3"
